--- a/viral-video.html
+++ b/viral-video.html
@@ -155,7 +155,7 @@
 
     <div class="card-container">
         <div class="image-card" data-card-id="1">
-            <img class="img-fluid" src="https://via.placeholder.com/1600x900" alt="ইমেজ ১">
+            <img class="img-fluid" src="https://raw.githubusercontent.com/NexToolHub/NexToolHub/refs/heads/main/images/Viral%20Link.jpg" alt="ইমেজ ১">
             <div class="card-content">
                 <p class="instruction">আনলক বাটনে ক্লিক করুন এবং নতুন ট্যাবে 20 সেকেন্ড অপেক্ষা করুন।</p>
                 <div class="button-container">
