--- a/viral-video.html
+++ b/viral-video.html
@@ -217,7 +217,7 @@
     <div class="header">
         <h1>সাদা কালো দুনিয়ায় তোমাকে স্বাগতম:</h1>
         <p>
-            এই প্যানেলে আপনি বিভিন্ন ধরনের ইমেজ এবং ফাইল পাবেন। প্রতিটি ফাইলের জন্য প্রথমে আনলক বাটনে ক্লিক করে একটি নির্দিষ্ট সময় অপেক্ষা করতে হবে। এরপর ডাউনলোড বাটনটি সচল হয়ে যাবে এবং আপনি ফাইলটি ডাউনলোড করতে পারবেন।
+            কিন্তু রাগ করবেন না আমার জন্য একটু বাড়তি 20 সেকেন্ড সময় দিবেন। এইসব ম্যানেজ করতে আমারও তো অনেক অনেক অনেক সময় ব্যয় করা লাগে একটু সময় তো দিতেই পারেন। "ধন্যবাদ" ইনজয় করুন!! 🥵
         </p>
     </div>
 
