--- a/viral-video.html
+++ b/viral-video.html
@@ -55,7 +55,7 @@
 
         /* Main content container */
         .main-content {
-            flex-grow: 1;
+            /* flex-grow: 1;  <-- এই লাইনটি সরানো হয়েছে */
             display: flex;
             flex-direction: column;
             justify-content: center;
