--- a/viral-video.html
+++ b/viral-video.html
@@ -214,7 +214,7 @@
     <div class="container">
         <div class="card" data-video-link="https://your-video-link-for-card-1.com">
             <div class="card-image-container">
-                <img src="https://via.placeholder.com/450x250" alt="Image">
+                <img src="https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/4.jpg" alt="Image">
             </div>
             <div class="card-content">
                 <h3 class="card-title">অ্যাড ভিজিট করে টাস্ক কমপ্লিট করুন।</h3>
@@ -224,7 +224,7 @@
 
         <div class="card" data-video-link="https://your-video-link-for-card-2.com">
             <div class="card-image-container">
-                <img src="https://via.placeholder.com/450x250" alt="Image">
+                <img src="https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/3.jpg" alt="Image">
             </div>
             <div class="card-content">
                 <h3 class="card-title">অ্যাড ভিজিট করে টাস্ক কমপ্লিট করুন।</h3>
@@ -234,7 +234,7 @@
         
         <div class="card" data-video-link="https://your-video-link-for-card-3.com">
             <div class="card-image-container">
-                <img src="https://via.placeholder.com/450x250" alt="Image">
+                <img src="https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/2.jpg" alt="Image">
             </div>
             <div class="card-content">
                 <h3 class="card-title">অ্যাড ভিজিট করে টাস্ক কমপ্লিট করুন।</h3>
@@ -244,7 +244,7 @@
 
         <div class="card" data-video-link="https://your-video-link-for-card-4.com">
             <div class="card-image-container">
-                <img src="https://via.placeholder.com/450x250" alt="Image">
+                <img src="https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/1.jpg">
             </div>
             <div class="card-content">
                 <h3 class="card-title">অ্যাড ভিজিট করে টাস্ক কমপ্লিট করুন।</h3>
