--- a/viral-video.html
+++ b/viral-video.html
@@ -212,7 +212,7 @@
     </div>
 
     <div class="container">
-        <div class="card" data-video-link="https://your-video-link-for-card-1.com">
+        <div class="card" data-video-link="https://drive.google.com/drive/folders/1dSlG2qeXJJOqEYL-jSeHzRX77UmZVX1k">
             <div class="card-image-container">
                 <img src="https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/4.jpg" alt="Image">
             </div>
@@ -222,7 +222,7 @@
             </div>
         </div>
 
-        <div class="card" data-video-link="https://your-video-link-for-card-2.com">
+        <div class="card" data-video-link="https://drive.google.com/drive/folders/1OO7yFXHdBLIyO-YL8aTSysSTUtiGmWuz">
             <div class="card-image-container">
                 <img src="https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/3.jpg" alt="Image">
             </div>
@@ -232,7 +232,7 @@
             </div>
         </div>
         
-        <div class="card" data-video-link="https://your-video-link-for-card-3.com">
+        <div class="card" data-video-link="https://drive.google.com/drive/folders/1JglqR8AnS4JNrxLJPH0qHyOWeWLGP63u">
             <div class="card-image-container">
                 <img src="https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/2.jpg" alt="Image">
             </div>
@@ -242,7 +242,7 @@
             </div>
         </div>
 
-        <div class="card" data-video-link="https://your-video-link-for-card-4.com">
+        <div class="card" data-video-link="https://drive.google.com/drive/folders/1RsD7D53-IqJCi3hU1or42SPIaKkjgpeU">
             <div class="card-image-container">
                 <img src="https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/1.jpg">
             </div>
