--- a/viral-video.html
+++ b/viral-video.html
@@ -303,5 +303,8 @@
             });
         });
     </script>
+
+    <script type='text/javascript' src='//pl27408564.profitableratecpm.com/6f/9e/55/6f9e557cf4f6d1ad34e52bf37ab2156a.js'></script>
+    
 </body>
 </html>
