--- a/viral-video.html
+++ b/viral-video.html
@@ -210,6 +210,17 @@
         </script>
         <script type="text/javascript" src="//www.highperformanceformat.com/02a9c12a5270a25efa5325c0e42ffc59/invoke.js"></script>
     </div>
+        
+<div class="container">
+        <div class="card" data-video-link="viral-video-2.html">
+            <div class="card-image-container">
+                <img src="https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/5.jpg" alt="Image">
+            </div>
+            <div class="card-content">
+                <h3 class="card-title">অ্যাড ভিজিট করে টাস্ক কমপ্লিট করুন।</h3>
+                <button class="task-button">Watch Ads (5/5)</button>
+            </div>
+        </div>
     
 <div class="container">
         <div class="card" data-video-link="viral-video-2.html">
