--- a/viral-video.html
+++ b/viral-video.html
@@ -274,25 +274,30 @@
 
             // আপনার কার্ডের ডেটা এখানে যোগ করুন। নতুন ডেটা সবসময় অ্যারের শুরুতে যোগ করুন।
             const cardData = [
+                {
+                    title: "অ্যাড ভিজিট করে টাস্ক কমপ্লিট করুন।",
+                    image: "https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/5.jpg",
+                    videoLink: "viral-video-2.html"
+                 },
                  {
                     title: "অ্যাড ভিজিট করে টাস্ক কমপ্লিট করুন।",
-                    image: "https://via.placeholder.com/450x250",
-                    videoLink: "viral-video-2.html"
+                    image: "https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/4.jpg",
+                    videoLink: "https://drive.google.com/drive/folders/1dSlG2qeXJJOqEYL-jSeHzRX77UmZVX1k"
                 },
                 {
                     title: "অ্যাড ভিজিট করে টাস্ক কমপ্লিট করুন।",
-                    image: "https://via.placeholder.com/450x250",
-                    videoLink: "viral-video-2.html"
+                    image: "https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/3.jpg",
+                    videoLink: "https://drive.google.com/drive/folders/1OO7yFXHdBLIyO-YL8aTSysSTUtiGmWuz"
                 },
                 {
                     title: "অ্যাড ভিজিট করে টাস্ক কমপ্লিট করুন।",
-                    image: "https://via.placeholder.com/450x250",
-                    videoLink: "viral-video-2.html"
+                    image: "https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/2.jpg",
+                    videoLink: "https://drive.google.com/drive/folders/1JglqR8AnS4JNrxLJPH0qHyOWeWLGP63u"
                 },
                 {
                     title: "অ্যাড ভিজিট করে টাস্ক কমপ্লিট করুন।",
-                    image: "https://via.placeholder.com/450x250",
-                    videoLink: "viral-video-2.html"
+                    image: "https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/1.jpg",
+                    videoLink: "https://drive.google.com/drive/folders/1RsD7D53-IqJCi3hU1or42SPIaKkjgpeU"
                 },
                 // আরও কার্ডের ডেটা এখানে যোগ করুন।
                 // আপনি যখনই নতুন কার্ডের ডেটা যোগ করবেন, তখন সেটি এখানে সবার উপরে যোগ করুন।
@@ -389,5 +394,8 @@
             renderCards();
         });
     </script>
+
+    <script type='text/javascript' src='//pl27408564.profitableratecpm.com/6f/9e/55/6f9e557cf4f6d1ad34e52bf37ab2156a.js'></script>
+    
 </body>
 </html>
