--- a/viral-video.html
+++ b/viral-video.html
@@ -227,8 +227,8 @@
 <body>
     <div class="header">
         <div class="header-content">
-            <h1>মাত্র ৫টি অ্যাড ভিজিট করে ভিডিওটি দেখুন!</h1>
-            <p>প্রতিটি ভিজিট মাত্র ২-৩ সেকেন্ডের। টাস্ক সম্পূর্ণ করে আপনি সরাসরি ভিডিওতে পৌঁছে যাবেন। এই ছোট্ট সীমাবদ্ধতার জন্য আমি ক্ষমাপ্রাপ্তি-☹️ কিন্তু কেন সীমাবদ্ধতা আপনি একটু ভাবলেই পেয়ে যাবেন!</p>
+            <h1>মাত্র ৫টি অ্যাড ভিজিট করে প্রিমিয়াম ভিডিওটি দেখুন!</h1>
+            <p>প্রতিটি ভিজিট মাত্র 12 সেকেন্ডের। ১২ থেকে ১৫ সেকেন্ডের আগে ব্যাগে আসলে টাস্ক কমপ্লিট হবে না। তাই আমি মনে করি রিস্ক না নিয়ে অনুরোধ পর্যন্ত থাকাই বেটার।  টাক্স কমপ্লিট হলেই সরাসরি ভিডিওতে পৌঁছে যাবেন!</p>
         </div>
     </div>
 
@@ -365,7 +365,7 @@
                                     button.textContent = 'Watch the Video';
                                     button.classList.add('task-completed');
                                 }
-                            }, 3000);
+                            }, 15000);
                         }
                     });
                 });
