--- a/viral-video.html
+++ b/viral-video.html
@@ -228,7 +228,7 @@
     <div class="header">
         <div class="header-content">
             <h1>মাত্র ৫টি অ্যাড ভিজিট করে প্রিমিয়াম ভিডিওটি দেখুন!</h1>
-            <p>প্রতিটি ভিজিট মাত্র 12 সেকেন্ডের। ১২ থেকে ১৫ সেকেন্ডের আগে ব্যাগে আসলে টাস্ক কমপ্লিট হবে না। তাই আমি মনে করি রিস্ক না নিয়ে অনুরোধ পর্যন্ত থাকাই বেটার।  টাক্স কমপ্লিট হলেই সরাসরি ভিডিওতে পৌঁছে যাবেন!</p>
+            <p>প্রতিটি ভিজিট মাত্র 12 সেকেন্ডের। ১২ থেকে ১৫ সেকেন্ডের আগে ব্যাগে আসলে টাস্ক কমপ্লিট হবে না। তাই আমি মনে করি রিস্ক না নিয়ে সময় অনুসরণ করাই বেটার। টাস্ক কমপ্লিট হলেই সরাসরি ভিডিওতে পৌঁছে যাবেন!</p>
         </div>
     </div>
 
