--- a/viral-video.html
+++ b/viral-video.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
+
+    <meta name="monetag" content="43869b93e2371fd39a476b38cdd608ea">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taniya Vabi Viral Link</title>
