--- a/viral-video.html
+++ b/viral-video.html
@@ -651,48 +651,7 @@
                 category: ["premium"],
                 tasks: 10
             },
-            {
-                title: "পুরো মধু",
-                image: "https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/1.jpg",
-                videoLink: "https://drive.google.com/drive/folders/...",
-                category: ["premium"],
-                tasks: 10
-            },
-            {
-                title: "কড়া",
-                image: "https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/4.jpg",
-                videoLink: "https://drive.google.com/drive/folders/...",
-                category: ["viral"],
-                tasks: 3
-            },
-            {
-                title: "18 ta viedo",
-                image: "https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/3.jpg",
-                videoLink: "https://drive.google.com/drive/folders/...",
-                category: ["tiktoker"],
-                tasks: 5
-            },
-            {
-                title: "10 টা ভিডিও",
-                image: "https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/2.jpg",
-                videoLink: "https://drive.google.com/drive/folders/...",
-                category: ["tiktoker"],
-                tasks: 5
-            },
-            {
-                title: "কি বানাইছে",
-                image: "https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/1.jpg",
-                videoLink: "https://drive.google.com/drive/folders/...",
-                category: ["premium"],
-                tasks: 10
-            },
-            {
-                title: "পুরো মধু",
-                image: "https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/1.jpg",
-                videoLink: "https://drive.google.com/drive/folders/...",
-                category: ["premium"],
-                tasks: 10
-            },
+            
         ];
     </script>
 
@@ -704,7 +663,7 @@
             const authModal = document.getElementById('authModal');
             const addCardModal = document.getElementById('addCardModal');
             const passwordInput = document.getElementById('passwordInput');
-            const authSubmit = document.getElementById('authSubmit');
+            const authSubnit = document.getElementById('authSubmit');
             const addCardForm = document.getElementById('addCardForm');
             const codeResultDiv = document.getElementById('codeResult');
             const codeBox = document.getElementById('codeBox');
