--- a/viral-video.html
+++ b/viral-video.html
@@ -624,30 +624,30 @@
     <script>
         const cardData = [
             {
-                title: "কড়া",
+                title: "জান্নাতের মধু সুস্বাদু",
                 image: "https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/4.jpg",
-                videoLink: "https://drive.google.com/drive/folders/...",
-                category: ["viral"],
+                videoLink: "https://1024terabox.com/s/1vA8ltUI4UGErPNujWFuSQw",
+                category: ["tiktoker"],
                 tasks: 3
             },
             {
-                title: "18 ta viedo",
+                title: "কালো খেতে শসার চাষ",
                 image: "https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/3.jpg",
-                videoLink: "https://drive.google.com/drive/folders/...",
+                videoLink: "https://drive.google.com/drive/folders/1OO7yFXHdBLIyO-YL8aTSysSTUtiGmWuz",
                 category: ["tiktoker"],
                 tasks: 5
             },
             {
-                title: "10 টা ভিডিও",
+                title: "কুমিল্লার রসমালাই 🤤",
                 image: "https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/2.jpg",
-                videoLink: "https://drive.google.com/drive/folders/...",
-                category: ["tiktoker"],
+                videoLink: "https://1024terabox.com/s/1jhlU9zGUNwXtSOw3jwiIdw",
+                category: ["viral"],
                 tasks: 5
             },
             {
-                title: "কি বানাইছে",
+                title: "নিঃশ্বাসের সাউন্ড 🥵",
                 image: "https://raw.githubusercontent.com/nth-link/NTH-link/refs/heads/main/images/1.jpg",
-                videoLink: "https://drive.google.com/drive/folders/...",
+                videoLink: "https://drive.google.com/drive/folders/1RsD7D53-IqJCi3hU1or42SPIaKkjgpeU",
                 category: ["premium"],
                 tasks: 10
             },
